--- a/lab8/public/index.html
+++ b/lab8/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <title>Lab 8/title>
+    <title>Lab 8</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
